<resources>

    <string name="app_name">Max it !</string>
    <string name="play_button">Cliquez sur l\'écran\npour jouer</string>



    <string name="game_mode">Modes de jeu</string>
    <string name="campagne">Campagne</string>
    <string name="fast_game">Partie rapide</string>
    <string name="custom_game">Partie personnalisée</string>
    <string name="online">Partie en ligne</string>



    <string name="game_options">Paramètres de la partie</string>
    <string name="playvsbot">Jouer\ncontre l\'IA</string>
    <string name="playersmode">Jouer\n   à deux   </string>
    <string name="chose_difficulty">Difficulté</string>
    <string name="bot_easy">Facile</string>
    <string name="bot_normal">Normal</string>
    <string name="bot_hard">Difficile</string>
    <string name="invert_case_box">Inverser la vue à chaque tour</string>
    <string name="lines">Lignes</string>
    <string name="columns">Colonnes</string>
    <string name="cells">Cellules</string>
    <string name="hidden_cells">Cellules cachées</string>
    <string name="neutral_cells">Cellules neutres</string>
    <string name="launch_game">Lancer la partie !</string>
    <string name="wrong_line_row_value">Choisir un nombre entre %1$d et %2$d</string>



    <string name="turn_player1">Au tour du joueur 1</string>
    <string name="turn_player2">Au tour du joueur 2</string>
    <string name="turn_playervsbot">À votre tour</string>
    <string name="turn_bot">Le bot réfléchi</string>

    <string name="player1_wins">Victoire du joueur 1</string>
    <string name="player2_wins">Victoire du joueur 2</string>
    <string name="playervsbot_wins">Victoire !</string>
    <string name="bot_wins">Défaite</string>
    <string name="draw">Égalité</string>

    <string name="play_again">Rejouer</string>
    <string name="unavailable_value">Valeur indisponible</string>

</resources>
