<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/game_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="20sp"
        android:textSize="30sp"
        android:textColor="@color/black_overlay"
        android:text="@string/game_mode"/>


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20sp">

            <Button
                android:id="@+id/campagne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/campagne" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20sp">
            <Button
                android:id="@+id/fast_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/fast_game" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20sp">
            <Button
                android:id="@+id/custom_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:padding="10sp"
                android:gravity="center"
                android:text="@string/custom_game" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20sp">
            <Button
                android:id="@+id/online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/online" />
        </TableRow>
    </TableLayout>




</RelativeLayout>